Tweak colors, fix remaining issues in dark mode, add 3:1 indicator next to highlighted code blocks

--- a/docs/.vuepress/theme/styles/base.pcss
+++ b/docs/.vuepress/theme/styles/base.pcss
@@ -19,7 +19,8 @@
   --badge-bg-color-tip: #2F835D;
   --border-color: #e2e8f0;
   --doc-set-color: theme("colors.slate");
-  --code-highlight-color: rgba(252, 233, 106, 0.3);
+  --code-highlight-color: rgba(254, 246, 192, 0.5);
+  --code-highlight-border: #938E25;
   --selection-color: rgba(74, 124, 246, 0.3);
   --code-bg-color: theme("colors.soft");
   --custom-block-bg-color: theme("colors.softer");
